2006-01-24  Lucas Rocha  <lucasr@gnome.org>

	* libgnomeui/gnome-vfs-util.c: (size_prepared_cb) leave pixbuf with
	the original size if the image is smaller than the target thumbnail 
	size.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in, NEWS: release 2.13.2.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgnomeui/gnome-client.c: (gnome_client_module_info_get):
	* libgnomeui/gnome-ui-init.c: (libgnomeui_module_info_get): Apply patch
	from Christian Persch that makes libgnomeui use the correct struct
	member for parsing the command line arguments using GOption.
	Closes bug #326846.

2006-01-15  Kjartan Maraas <kmaraas@gnome.org>

	* libgnomeui/gnome-icon-lookup.c: (gnome_icon_lookup): Prevent
	a crash if mime_type is NULL. Patch from Felix Riemann.
	Closes bug #319549.

2006-01-15  Bastien Nocera  <hadess@hadess.net>

	* libgnomeui/gnome-thumbnail.c: (read_scripts): transform the second
	'@' in the GConf tree into a '+', to allow thumbnailing files with
	a '+' in their mime-type (Closes: #326638)

2006-01-13  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update some.
	* configure.in: Bump reqs for libgnome and libbonoboui.
	* libgnomeui/gnome-client.c: 
	(gnome_client_module_get_goption_group),
	(gnome_client_module_info_get):
	* libgnomeui/gnome-ui-init.c: (libgnomeui_get_goption_group),
	(libgnomeui_module_info_get): Fix leaks introduced by the move
	to GOption. (Christian Perch). Closes bug #326237.

2006-01-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-app-helper.c: (showing_pixmaps_changed_notify),
	(menus_have_tearoff_changed_notify),
	(per_app_toolbar_style_changed_notify),
	(toolbar_style_changed_notify):
	* libgnomeui/gnome-app.c: (dock_item_changed_notify):
	* libgnomeui/gnome-client.c: (client_save_yourself_callback),
	(client_die_callback), (client_save_complete_callback),